--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <!-- Content Starts Here -->
 
     <div class="text-center container mx-auto">
-      <h1 class="mt-24 text-5xl px-6 font-extrabold text-red-500 tracking-tight">About Binaryville</h1>
+      <h1>About Binaryville</h1>
       <img class="w-32 mx-auto" src="http://pixelprowess.com/i/powship.svg" alt="POW Ship" />
       <p class="mt-4 px-6 text-xl text-gray-500 mx-auto">
         On the edge of the world stands the progressive town of Binaryville, where technology is a way of life. The robots who live, work, and play in
         Binaryville learn from an early age that magic is made simply by combining 0's and 1's. For the Binaryville robots, every waking thought and
         every sleeping dream is consumed with unique permutations…and endless possibilities.
       </p>
+      <div class="btn btn-angry">More info</div>
     </div>
 
     <!-- Content Ends Here -->
