--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="text-center container mx-auto">
       <h1>About Binaryville</h1>
       <img class="w-32 mx-auto" src="http://pixelprowess.com/i/powship.svg" alt="POW Ship" />
-      <p class="mt-4 px-6 text-xl text-gray-500 mx-auto">
+      <p class="mt-4 px-6 text-[19px] text-gray-500 mx-auto">
         On the edge of the world stands the progressive town of Binaryville, where technology is a way of life. The robots who live, work, and play in
         Binaryville learn from an early age that magic is made simply by combining 0's and 1's. For the Binaryville robots, every waking thought and
         every sleeping dream is consumed with unique permutations…and endless possibilities.
